Fix some issues with listing preview on mobile

--- a/frontend/assets/stylesheets/content/listing.scss
+++ b/frontend/assets/stylesheets/content/listing.scss
@@ -79,109 +79,6 @@
       }
     }
   }
-
-  // Styling the listing preview which shows up to the right of listing info
-  // on larger screens and fixed at the bottom of the screen on smaller screens
-  .listing-preview {
-    transition: all 0.2s ease;
-    top: 0;
-
-    .title {
-      margin-bottom: 0.5rem !important;
-    }
-
-    .info-trigger {
-      position: absolute;
-      right: 1rem;
-      cursor: hand;
-      cursor: pointer;
-      transition: all 0.2s ease;
-      color: $gray;
-      font-size: 1.8rem;
-
-      &:hover,
-      &:focus,
-      &:active {
-        color: $dark-gray;
-      }
-
-      &.active {
-        transform: rotate(180deg);
-      }
-    }
-
-    .card {
-      padding: 1rem;
-    }
-  }
-}
-
-@media screen and (min-width: 993px) and (min-device-width: 993px) {
-  .listing .listing-preview {
-    top: 0 !important;
-  }
-}
-
-/**
- * Listing preview is fixed-position at the bottom on smaller screens
- */
-@media screen and (max-width: 992px) {
-  .listing {
-    .listing-preview {
-      position: fixed;
-      width: 100%;
-      left: 0;
-      z-index: 12;
-      padding: 0;
-
-      .card {
-        border-radius: 0;
-        border-right: 0px solid transparent;
-        border-left: 0px solid transparent;
-        border-bottom: 0px solid transparent;
-        box-shadow: 0rem -0.1rem 0.05rem rgba(0, 0, 0, 0.05);
-      }
-    }
-  }
-}
-
-@media screen and (max-device-width: 992px) {
-  .listing {
-    .listing-preview {
-      position: fixed;
-      width: 100%;
-      left: 0;
-      z-index: 12;
-      padding: 0;
-
-      .card {
-        border-radius: 0;
-        border-right: 0px solid transparent;
-        border-left: 0px solid transparent;
-        border-bottom: 0px solid transparent;
-        box-shadow: 0rem -0.1rem 0.05rem rgba(0, 0, 0, 0.05);
-      }
-    }
-  }
-}
-
-/**
- * Scale down title font on smaller screens
- */
-@media screen and (max-width: 748px) {
-  .listing #listing-preview .title {
-    font-size: 1.8rem;
-    margin-top: 0.2rem;
-    margin-bottom: 0.7rem;
-  }
-}
-
-@media screen and (max-device-width: 748px) {
-  .listing #listing-preview .title {
-    font-size: 1.8rem;
-    margin-top: 0.2rem;
-    margin-bottom: 0.7rem;
-  }
 }
 
 /**
